--- a/1-hello-dashboards/index.qmd
+++ b/1-hello-dashboards/index.qmd
@@ -9,7 +9,12 @@ title: "Hello, Dashboards!"
 ```{=html}
 <iframe class="slide-deck" src="1-hello-dashboards.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
 ```
-
 ## Exercises
 
-To be posted.
+-   R:
+
+    -   Option 1 - Cloud: Go to Posit Cloud for the workshop, open project titled `1 - Hello, Dashboards!`.
+
+    -   Option 2 - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-r-1.qmd.`
+
+-   Python - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-py-1.qmd.`
