--- a/4-parameters-interactivity-deployment/4-parameters-interactivity-deployment.qmd
+++ b/4-parameters-interactivity-deployment/4-parameters-interactivity-deployment.qmd
@@ -183,6 +183,18 @@ Using [ShinyLive](https://posit-dev.github.io/r-shinylive/)
 
 # Your turn
 
+## Start
+
+::: r-box
+-   Option 1 - Cloud: Go to Posit Cloud for the workshop, open project titled `4 - Parameters, interactivity, and deployment`.
+
+-   Option 2 - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-r-4.qmd.`
+:::
+
+::: python-box
+Python - Local: Clone the GitHub repo `posit-conf-2024/olympicdash` (<https://github.com/posit-conf-2024/olympicdash>) and work on `olympicdash-py-4.qmd.`
+:::
+
 ## Goal
 
 ::: your-turn
