--- a/1-hello-dashboards/1-hello-dashboards.qmd
+++ b/1-hello-dashboards/1-hello-dashboards.qmd
@@ -97,6 +97,12 @@ Quarto!
 | 15:30 - 17:00 | Parameters, interactivity, and deployment |
 | 16:30 - 17:00 | Quarto Q & A                              |
 
+## Breaks
+
+- Coffee breaks: Levels 3, 5, 6 & 7
+
+- Lunch: Regency Ballroom on Level 7
+
 ## WiFi
 
 ::: larger
